--- a/VolleyballScoreSheet/Views/AlertWindow.xaml
+++ b/VolleyballScoreSheet/Views/AlertWindow.xaml
@@ -1,17 +1,13 @@
-﻿<Window x:Class="VolleyballScoreSheet.Views.AlertWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:prism="http://prismlibrary.com/"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
-        prism:ViewModelLocator.AutoWireViewModel="True"
-        MinHeight="0"
-        WindowStartupLocation="CenterOwner"
-        MinWidth="0"
-        SizeToContent="WidthAndHeight">
-        
-    <Grid>
-        
-    </Grid>
+﻿<Window
+    x:Class="VolleyballScoreSheet.Views.AlertWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
+    prism:ViewModelLocator.AutoWireViewModel="True"
+    ResizeMode="NoResize">
+
+    <Grid />
 </Window>
