--- a/VolleyballScoreSheet/Views/MainWindow.xaml
+++ b/VolleyballScoreSheet/Views/MainWindow.xaml
@@ -6,10 +6,12 @@
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:rp="clr-namespace:Reactive.Bindings.Interactivity;assembly=ReactiveProperty.WPF"
+    xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="Title"
     Width="1200"
     prism:ViewModelLocator.AutoWireViewModel="True"
     SizeToContent="Height"
+    Style="{StaticResource UiWindow}"
     WindowStartupLocation="CenterScreen">
 
     <i:Interaction.Triggers>
@@ -19,6 +21,7 @@
     </i:Interaction.Triggers>
 
     <StackPanel>
+        <wpfui:TitleBar />
         <DockPanel LastChildFill="True">
             <ContentControl Margin="5" prism:RegionManager.RegionName="ContentRegion" />
         </DockPanel>
