--- a/VolleyballScoreSheet/Views/NotificationDialog.xaml
+++ b/VolleyballScoreSheet/Views/NotificationDialog.xaml
@@ -1,30 +1,53 @@
-﻿<UserControl x:Class="VolleyballScoreSheet.Views.NotificationDialog"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
-             xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
-             prism:ViewModelLocator.AutoWireViewModel="True">
+﻿<UserControl
+    x:Class="VolleyballScoreSheet.Views.NotificationDialog"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
+    prism:ViewModelLocator.AutoWireViewModel="True">
+
+    <prism:Dialog.WindowStyle>
+        <Style BasedOn="{StaticResource UiWindow}" TargetType="Window">
+            <Setter Property="prism:Dialog.WindowStartupLocation" Value="CenterOwner" />
+            <Setter Property="ResizeMode" Value="NoResize" />
+            <Setter Property="ShowInTaskbar" Value="False" />
+            <Setter Property="Width" Value="400" />
+            <Setter Property="MinHeight" Value="50" />
+            <Setter Property="SizeToContent" Value="Height" />
+            <Setter Property="WindowStyle" Value="ToolWindow" />
+        </Style>
+    </prism:Dialog.WindowStyle>
 
     <StackPanel>
-        <Grid Margin="20">
+        <wpfui:TitleBar
+            Title="{Binding Title.Value}"
+            CanMaximize="False"
+            ShowMaximize="False"
+            ShowMinimize="False" />
+        <Grid Margin="10">
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <TextBlock HorizontalAlignment="Stretch"
-                   VerticalAlignment="Center"
-                   Text="{Binding Message.Value}"/>
+            <TextBlock
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Center"
+                FontSize="15"
+                Text="{Binding Message.Value}" />
 
-            <Button x:Name="OKButton"
-                Margin="5"
+            <Button
+                x:Name="OKButton"
+                Grid.Row="1"
+                Margin="0"
+                Padding="30,5"
+                HorizontalAlignment="Right"
                 Command="{Binding CloseDialogCommand}"
                 Content="{Binding ButtonText.Value}"
-                HorizontalAlignment="Right"
-                Grid.Row="1"
-                IsDefault="True" />
+                IsDefault="True"
+                Style="{StaticResource LightButton}" />
         </Grid>
     </StackPanel>
 </UserControl>
