--- a/VolleyballScoreSheet/Views/Rotation.xaml
+++ b/VolleyballScoreSheet/Views/Rotation.xaml
@@ -5,16 +5,31 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:VolleyballScoreSheet.ViewModels"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:prism="http://prismlibrary.com/">
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml">
+
+    <prism:Dialog.WindowStyle>
+        <Style BasedOn="{StaticResource UiWindow}" TargetType="Window">
+            <Setter Property="prism:Dialog.WindowStartupLocation" Value="CenterOwner" />
+            <Setter Property="ResizeMode" Value="NoResize" />
+            <Setter Property="ShowInTaskbar" Value="False" />
+            <Setter Property="Width" Value="600" />
+            <Setter Property="MinHeight" Value="50" />
+            <Setter Property="SizeToContent" Value="Height" />
+            <Setter Property="WindowStyle" Value="ToolWindow" />
+        </Style>
+    </prism:Dialog.WindowStyle>
 
     <StackPanel>
+        <wpfui:TitleBar
+            Title="Rotation"
+            ShowMaximize="False"
+            ShowMinimize="False" />
         <StackPanel Margin="10">
 
-            <Label Margin="5">スターティングラインナップを入力してください。</Label>
+            <TextBlock Margin="5" FontSize="20">スターティングラインナップを入力してください。</TextBlock>
 
             <Grid>
-
-
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition />
@@ -63,35 +78,47 @@
                         <RowDefinition />
                         <RowDefinition />
                     </Grid.RowDefinitions>
-                    <TextBox
+                    <wpfui:TextBox
                         Grid.Row="1"
                         Grid.Column="2"
                         Margin="5"
+                        ClearButtonEnabled="False"
+                        PlaceholderText="Ⅰ"
                         Text="{Binding LeftTeamRotatiton.Value[0]}" />
-                    <TextBox
+                    <wpfui:TextBox
                         Grid.Row="0"
                         Grid.Column="2"
                         Margin="5"
+                        ClearButtonEnabled="False"
+                        PlaceholderText="Ⅱ"
                         Text="{Binding LeftTeamRotatiton.Value[1]}" />
-                    <TextBox
+                    <wpfui:TextBox
                         Grid.Row="0"
                         Grid.Column="1"
                         Margin="5"
+                        ClearButtonEnabled="False"
+                        PlaceholderText="Ⅲ"
                         Text="{Binding LeftTeamRotatiton.Value[2]}" />
-                    <TextBox
+                    <wpfui:TextBox
                         Grid.Row="0"
                         Grid.Column="0"
                         Margin="5"
+                        ClearButtonEnabled="False"
+                        PlaceholderText="Ⅳ"
                         Text="{Binding LeftTeamRotatiton.Value[3]}" />
-                    <TextBox
+                    <wpfui:TextBox
                         Grid.Row="1"
                         Grid.Column="0"
                         Margin="5"
+                        ClearButtonEnabled="False"
+                        PlaceholderText="Ⅴ"
                         Text="{Binding LeftTeamRotatiton.Value[4]}" />
-                    <TextBox
+                    <wpfui:TextBox
                         Grid.Row="1"
                         Grid.Column="1"
                         Margin="5"
+                        ClearButtonEnabled="False"
+                        PlaceholderText="Ⅵ"
                         Text="{Binding LeftTeamRotatiton.Value[5]}" />
                 </Grid>
 
@@ -107,42 +134,57 @@
                         <RowDefinition />
                         <RowDefinition />
                     </Grid.RowDefinitions>
-                    <TextBox
+                    <wpfui:TextBox
                         Grid.Row="1"
                         Grid.Column="2"
                         Margin="5"
+                        ClearButtonEnabled="False"
+                        PlaceholderText="Ⅰ"
                         Text="{Binding RightTeamRotatiton.Value[0]}" />
-                    <TextBox
+                    <wpfui:TextBox
                         Grid.Row="0"
                         Grid.Column="2"
                         Margin="5"
+                        ClearButtonEnabled="False"
+                        PlaceholderText="Ⅱ"
                         Text="{Binding RightTeamRotatiton.Value[1]}" />
-                    <TextBox
+                    <wpfui:TextBox
                         Grid.Row="0"
                         Grid.Column="1"
                         Margin="5"
+                        ClearButtonEnabled="False"
+                        PlaceholderText="Ⅲ"
                         Text="{Binding RightTeamRotatiton.Value[2]}" />
-                    <TextBox
+                    <wpfui:TextBox
                         Grid.Row="0"
                         Grid.Column="0"
                         Margin="5"
+                        ClearButtonEnabled="False"
+                        PlaceholderText="Ⅳ"
                         Text="{Binding RightTeamRotatiton.Value[3]}" />
-                    <TextBox
+                    <wpfui:TextBox
                         Grid.Row="1"
                         Grid.Column="0"
                         Margin="5"
+                        ClearButtonEnabled="False"
+                        PlaceholderText="Ⅴ"
                         Text="{Binding RightTeamRotatiton.Value[4]}" />
-                    <TextBox
+                    <wpfui:TextBox
                         Grid.Row="1"
                         Grid.Column="1"
                         Margin="5"
+                        ClearButtonEnabled="False"
+                        PlaceholderText="Ⅵ"
                         Text="{Binding RightTeamRotatiton.Value[5]}" />
                 </Grid>
             </Grid>
             <Button
-                Margin="5"
+                Margin="0,5"
+                Padding="10"
                 Command="{Binding NextCommand}"
-                Content="次へ" />
+                Content="次へ"
+                FontSize="30"
+                Style="{StaticResource LightButton}" />
         </StackPanel>
     </StackPanel>
 </UserControl>
