--- a/VolleyballScoreSheet/Views/SetStatus.xaml
+++ b/VolleyballScoreSheet/Views/SetStatus.xaml
@@ -63,39 +63,6 @@
                     Grid.Column="1"
                     HorizontalAlignment="Center"
                     Text="{Binding BTeamSets.Value}" />
-
-                <TextBlock
-                    Grid.Row="0"
-                    Grid.Column="2"
-                    HorizontalAlignment="Center"
-                    Text="0" />
-                <TextBlock
-                    Grid.Row="1"
-                    Grid.Column="2"
-                    HorizontalAlignment="Center"
-                    Text="0" />
-
-                <TextBlock
-                    Grid.Row="0"
-                    Grid.Column="3"
-                    HorizontalAlignment="Center"
-                    Text="-" />
-                <TextBlock
-                    Grid.Row="1"
-                    Grid.Column="3"
-                    HorizontalAlignment="Center"
-                    Text="-" />
-
-                <TextBlock
-                    Grid.Row="0"
-                    Grid.Column="4"
-                    HorizontalAlignment="Center"
-                    Text="-" />
-                <TextBlock
-                    Grid.Row="1"
-                    Grid.Column="4"
-                    HorizontalAlignment="Center"
-                    Text="-" />
             </Grid>
 
             <StackPanel Grid.Column="1">
@@ -122,6 +89,7 @@
             </StackPanel>
             <Button
                 Grid.Column="2"
+                Margin="5"
                 Padding="15"
                 HorizontalAlignment="Stretch"
                 Command="{Binding EndCommand}"
@@ -131,6 +99,7 @@
 
             <Button
                 Grid.Column="4"
+                Margin="5"
                 Padding="15"
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
