--- a/VolleyballScoreSheet/Views/Substitution.xaml
+++ b/VolleyballScoreSheet/Views/Substitution.xaml
@@ -1,29 +1,70 @@
-﻿<UserControl x:Class="VolleyballScoreSheet.Views.Substitution"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
-             xmlns:prism="http://prismlibrary.com/"
-             xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
-             xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
-             xmlns:rp="clr-namespace:Reactive.Bindings.Interactivity;assembly=ReactiveProperty.WPF"
-             Height="300"
-             Width="500">
-    
-    <StackPanel Margin="10">
-        <Label>Substitution</Label>
-        <TextBlock Margin="5" FontSize="20" Text="{Binding TeamName.Value}"></TextBlock>
-        <ComboBox ItemsSource="{Binding OnCourtMemberItem.Value}" Margin="5" SelectedItem="{Binding OutMember}">
-            <i:Interaction.Triggers>
-                <i:EventTrigger EventName="SelectionChanged">
-                    <rp:EventToReactiveCommand Command="{Binding SelectionChangedCommand}"></rp:EventToReactiveCommand>
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-        </ComboBox>
-        <Label HorizontalAlignment="Center" FontSize="40" FontWeight="ExtraBold">↓</Label>
-        <ComboBox Margin="5" ItemsSource="{Binding OutCourtMemberItem.Value}" SelectedValue="{Binding InMember}"></ComboBox>
-        <Button Content="キャンセル" Margin="5" Command="{Binding CancelCommand}"></Button>
-        <Button Content="交代" Margin="5" Command="{Binding SubstitutionCommand}"></Button>
+﻿<UserControl
+    x:Class="VolleyballScoreSheet.Views.Substitution"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:rp="clr-namespace:Reactive.Bindings.Interactivity;assembly=ReactiveProperty.WPF"
+    xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml">
+    <prism:Dialog.WindowStyle>
+        <Style BasedOn="{StaticResource UiWindow}" TargetType="Window">
+            <Setter Property="prism:Dialog.WindowStartupLocation" Value="CenterOwner" />
+            <Setter Property="ResizeMode" Value="NoResize" />
+            <Setter Property="ShowInTaskbar" Value="False" />
+            <Setter Property="Width" Value="600" />
+            <Setter Property="MinHeight" Value="50" />
+            <Setter Property="SizeToContent" Value="Height" />
+            <Setter Property="WindowStyle" Value="ToolWindow" />
+        </Style>
+    </prism:Dialog.WindowStyle>
+
+    <StackPanel>
+        <wpfui:TitleBar
+            Title="選手交代"
+            ShowMaximize="False"
+            ShowMinimize="False" />
+        <StackPanel Margin="10">
+            <TextBlock
+                Margin="5"
+                FontSize="20"
+                Text="{Binding TeamName.Value}" />
+            <ComboBox
+                Margin="0,0,0,0"
+                FontSize="20"
+                ItemsSource="{Binding OnCourtMemberItem.Value}"
+                SelectedItem="{Binding OutMember}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectionChanged">
+                        <rp:EventToReactiveCommand Command="{Binding SelectionChangedCommand}" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </ComboBox>
+            <Label
+                HorizontalAlignment="Center"
+                FontSize="40"
+                FontWeight="ExtraBold">
+                ↓
+            </Label>
+            <ComboBox
+                Margin="0,5,0,20"
+                FontSize="20"
+                ItemsSource="{Binding OutCourtMemberItem.Value}"
+                SelectedValue="{Binding InMember}" />
+            <Button
+                Margin="0,0,0,0"
+                Padding="0,10"
+                Command="{Binding CancelCommand}"
+                Content="キャンセル"
+                Style="{StaticResource LightButton}" />
+            <Button
+                Margin="0,5,0,0"
+                Padding="0,10"
+                Command="{Binding SubstitutionCommand}"
+                Content="交代"
+                Style="{StaticResource LightButton}" />
+        </StackPanel>
     </StackPanel>
 </UserControl>
