--- a/VolleyballScoreSheet/Views/Substitution.xaml
+++ b/VolleyballScoreSheet/Views/Substitution.xaml
@@ -35,10 +35,10 @@
                 Margin="0,0,0,0"
                 FontSize="20"
                 ItemsSource="{Binding OnCourtMemberItem.Value}"
-                SelectedItem="{Binding OutMember}">
+                SelectedItem="{Binding OutMember.Value}">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="SelectionChanged">
-                        <rp:EventToReactiveCommand Command="{Binding SelectionChangedCommand}" />
+                        <rp:EventToReactiveCommand Command="{Binding OutSelectionChangedCommand}" />
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </ComboBox>
@@ -52,7 +52,7 @@
                 Margin="0,5,0,20"
                 FontSize="20"
                 ItemsSource="{Binding OutCourtMemberItem.Value}"
-                SelectedValue="{Binding InMember}" />
+                SelectedValue="{Binding InMember.Value, Mode=OneWayToSource}" />
 
             <Grid>
                 <Grid.ColumnDefinitions>
