--- a/VolleyballScoreSheet/Views/Card/Card.xaml
+++ b/VolleyballScoreSheet/Views/Card/Card.xaml
@@ -2,6 +2,7 @@
     x:Class="VolleyballScoreSheet.Views.Card.Card"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cv="clr-namespace:VolleyballScoreSheet.Converter"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
     prism:ViewModelLocator.AutoWireViewModel="True">
@@ -11,29 +12,32 @@
             <Setter Property="prism:Dialog.WindowStartupLocation" Value="CenterOwner" />
             <Setter Property="ResizeMode" Value="NoResize" />
             <Setter Property="ShowInTaskbar" Value="False" />
-            <Setter Property="Width" Value="900" />
+            <Setter Property="Width" Value="1000" />
             <Setter Property="MinHeight" Value="50" />
             <Setter Property="SizeToContent" Value="Height" />
             <Setter Property="WindowStyle" Value="ToolWindow" />
         </Style>
-    </prism:Dialog.WindowStyle>
 
+    </prism:Dialog.WindowStyle>
+    <UserControl.Resources>
+        <cv:HiddenOrVissible x:Key="HiddenOrVissible" />
+    </UserControl.Resources>
     <StackPanel>
         <wpfui:TitleBar
-            Title="カード"
+            Title="罰則"
             ShowMaximize="False"
             ShowMinimize="False" />
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="300" />
                 <ColumnDefinition Width="300" />
-                <ColumnDefinition Width="300" />
+                <ColumnDefinition Width="400" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
+                <RowDefinition Height="140" />
+                <RowDefinition Height="140" />
+                <RowDefinition Height="140" />
+                <RowDefinition Height="60" />
             </Grid.RowDefinitions>
             <Button
                 Grid.Row="0"
@@ -52,18 +56,19 @@
                         Source="/Asset/DelayWarning.png"
                         Stretch="UniformToFill" />
                     <TextBlock
-                        Grid.Column="1"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
                         Margin="10"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
                         FontSize="20"
-                        Text="遅延の警告" />
+                        Text="ディレイワーニング" />
                 </Grid>
             </Button>
             <Button
                 Grid.Row="0"
                 Grid.Column="1"
-                Margin="2.5,2.5,5,2.5"
+                Margin="2.5,2.5,2.5,2.5"
                 Command="{Binding DelayPenaltyCommand}"
                 Style="{StaticResource LightButton}">
                 <Grid>
@@ -74,12 +79,12 @@
 
                     <Image Width="130" Source="/Asset/DelayPenalty.png" />
                     <TextBlock
-                        Grid.Column="1"
+                        Grid.ColumnSpan="2"
                         Margin="10"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
                         FontSize="20"
-                        Text="遅延の反則" />
+                        Text="ディレイペナルティ" />
                 </Grid>
             </Button>
             <Button
@@ -106,7 +111,7 @@
             <Button
                 Grid.Row="1"
                 Grid.Column="1"
-                Margin="2.5,2.5,5,2.5"
+                Margin="2.5,2.5,2.5,2.5"
                 Style="{StaticResource LightButton}">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -148,7 +153,7 @@
             <Button
                 Grid.Row="2"
                 Grid.Column="1"
-                Margin="2.5,2.5,5,2.5"
+                Margin="2.5,2.5,2.5,2.5"
                 Style="{StaticResource LightButton}">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -167,11 +172,187 @@
                 </Grid>
             </Button>
 
+            <Grid
+                Grid.RowSpan="4"
+                Grid.Column="2"
+                Margin="2.5,5,10,2.5">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="70" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Button
+                    Height="70"
+                    Margin="0,0,1,0"
+                    Command="{Binding ImproperRequestCommmand}"
+                    Style="{StaticResource LightButton}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="130" />
+                            <ColumnDefinition Width="130" />
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Orientation="Horizontal">
+                            <Grid Margin="5">
+                                <TextBlock
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    FontSize="40"
+                                    FontWeight="Light"
+                                    Text="✕"
+                                    Visibility="{Binding ImproperRequestA.Value, Converter={StaticResource HiddenOrVissible}}" />
+                                <TextBlock
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    FontSize="40"
+                                    Text="○" />
+                                <TextBlock
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    FontSize="30"
+                                    Text="A" />
+                            </Grid>
+                            <Grid Margin="5">
+                                <TextBlock
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    FontSize="40"
+                                    FontWeight="Light"
+                                    Text="✕"
+                                    Visibility="{Binding ImproperRequestB.Value, Converter={StaticResource HiddenOrVissible}}" />
+                                <TextBlock
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    FontSize="40"
+                                    Text="○" />
+                                <TextBlock
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    FontSize="30"
+                                    Text="B" />
+                            </Grid>
+                        </StackPanel>
+
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="10"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                            FontSize="20"
+                            Text="不当な要求" />
+                    </Grid>
+                </Button>
+
+                <DataGrid
+                    Grid.Row="1"
+                    Margin="2.5,5,2.5,5"
+                    AutoGenerateColumns="False"
+                    CanUserResizeRows="False"
+                    IsReadOnly="True"
+                    ItemsSource="{Binding Sanctions.Value}"
+                    RowHeaderWidth="0">
+                    <DataGrid.ColumnHeaderStyle>
+                        <Style BasedOn="{StaticResource DefaultDataGridColumnHeaderStyle}" TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                            <Setter Property="FontSize" Value="15" />
+                        </Style>
+                    </DataGrid.ColumnHeaderStyle>
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn
+                            Width="1*"
+                            Binding="{Binding Warning}"
+                            CanUserResize="False"
+                            Header="警告">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
+                        <DataGridTextColumn
+                            Width="1*"
+                            Binding="{Binding Penalty}"
+                            CanUserResize="False"
+                            Header="反則">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn
+                            Width="1*"
+                            Binding="{Binding Explusion}"
+                            CanUserResize="False"
+                            Header="退場">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn
+                            Width="1*"
+                            Binding="{Binding Disqualification}"
+                            CanUserResize="False"
+                            Header="失格">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn
+                            Width="1*"
+                            Binding="{Binding Team}"
+                            CanUserResize="False"
+                            Header="A・B">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn
+                            Width="1*"
+                            Binding="{Binding Set}"
+                            CanUserResize="False"
+                            Header="セット">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn
+                            Width="2*"
+                            Binding="{Binding Score}"
+                            CanUserResize="False"
+                            Header="スコア">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </Grid>
+
 
             <Button
                 Grid.Row="3"
-                Grid.Column="1"
-                Margin="2.5,2.5,5,5"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Margin="5,2.5,2.5,5"
                 Padding="0,10"
                 Command="{Binding CancelCommand}"
                 Content="キャンセル"
