同一中断中の選手交代に罰則を適用

--- a/VolleyballScoreSheet/Views/SameInterruptionSubstitution.xaml
+++ b/VolleyballScoreSheet/Views/SameInterruptionSubstitution.xaml
@@ -42,7 +42,7 @@
                     Padding="30,5"
                     Background="#cd1141"
                     Command="{Binding RejectCommand}"
-                    Content="拒否"
+                    Content="{Binding Sanction.Value}"
                     IsDefault="True"
                     Style="{StaticResource ColorButton}" />
                 <Button
