--- a/VolleyballScoreSheet/Views/Card/Card.xaml
+++ b/VolleyballScoreSheet/Views/Card/Card.xaml
@@ -113,6 +113,7 @@
                 Grid.Row="1"
                 Grid.Column="1"
                 Margin="2.5,2.5,2.5,2.5"
+                Command="{Binding RedCardCommmand}"
                 Style="{StaticResource LightButton}">
                 <Grid>
                     <Grid.ColumnDefinitions>
