--- a/VolleyballScoreSheet/Views/Card/RedCard.xaml
+++ b/VolleyballScoreSheet/Views/Card/RedCard.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="VolleyballScoreSheet.Views.Card.SelectPlayerAndStaff"
+    x:Class="VolleyballScoreSheet.Views.Card.RedCard"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://prismlibrary.com/"
@@ -19,11 +19,11 @@
 
     <StackPanel>
         <wpfui:TitleBar
-            Title="選手、スタッフを選択"
+            Title="レッドカード"
             ShowMaximize="False"
             ShowMinimize="False" />
-        <TextBlock Margin="10" Text="{Binding Message.Value}" />
-        <Grid Margin="10">
+        <TextBlock Text="{Binding Message}" />
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
@@ -32,26 +32,31 @@
                 <RowDefinition />
                 <RowDefinition />
             </Grid.RowDefinitions>
-
-            <ComboBox
-                Grid.ColumnSpan="2"
-                ItemsSource="{Binding PlayerAndStaff}"
-                SelectedItem="{Binding SelectedItem.Value}" />
             <Button
-                Grid.Row="1"
                 Grid.Column="0"
-                Margin="0,2.5,2.5,0"
-                Padding="0,10"
-                Command="{Binding CancelCommand}"
-                Content="キャンセル"
-                Style="{StaticResource LightButton}" />
+                Margin="5,5,2.5,2.5"
+                Padding="0,15"
+                Background="{Binding LeftTeamColor}"
+                Command="{Binding LeftCommand}"
+                Content="{Binding LeftTeamName}"
+                FontSize="20"
+                Style="{StaticResource ColorButton}" />
+            <Button
+                Grid.Column="1"
+                Margin="2.5,5,5,2.5"
+                Padding="0,15"
+                Background="{Binding RightTeamColor}"
+                Command="{Binding RightCommand}"
+                Content="{Binding RightTeamName}"
+                FontSize="20"
+                Style="{StaticResource ColorButton}" />
             <Button
                 Grid.Row="1"
                 Grid.Column="1"
-                Margin="2.5,2.5,0,0"
+                Margin="2.5,2.5,5,5"
                 Padding="0,10"
-                Command="{Binding SubmitCommand}"
-                Content="確定"
+                Command="{Binding CancelCommand}"
+                Content="キャンセル"
                 Style="{StaticResource LightButton}" />
         </Grid>
     </StackPanel>
