--- a/VolleyballScoreSheet/Views/Card/SelectPlayerAndStaff.xaml
+++ b/VolleyballScoreSheet/Views/Card/SelectPlayerAndStaff.xaml
@@ -25,15 +25,15 @@
         <TextBlock Margin="10" Text="{Binding Message.Value}" />
         <Grid Margin="10">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="7*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition />
             </Grid.RowDefinitions>
 
-            <ComboBox
+            <ComboBox 
                 Grid.ColumnSpan="2"
                 ItemsSource="{Binding PlayerAndStaff}"
                 SelectedItem="{Binding SelectedItem.Value}" />
@@ -42,9 +42,10 @@
                 Grid.Column="0"
                 Margin="0,2.5,2.5,0"
                 Padding="0,10"
+                Background="#cd1141"
                 Command="{Binding CancelCommand}"
                 Content="キャンセル"
-                Style="{StaticResource LightButton}" />
+                Style="{StaticResource ColorButton}" />
             <Button
                 Grid.Row="1"
                 Grid.Column="1"
